--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -550,10 +550,9 @@ body.inbox {
 }
 
 .daterangepicker.dropdown-menu {
-  width: 490px;
   padding: 0;
   margin: 0;
-  margin-left: -13em;
+  margin-left: -15em;
 }
 
 @media (max-width: 767px) {
@@ -687,18 +686,35 @@ body.inbox {
     }
   }
 
-  /* hide the datepicker tick */
-  .datepicker:before, .datepicker:after {
-    display: none;
-  }
-
   .row.header .extras a {
     padding-top: 0.3em;
   }
 
   .daterangepicker.dropdown-menu {
     width: 245px;
-    &.show-calendar .right {
+    height: 240px;
+    .calendar {
+      transition: left 500ms ease 0s;
+      position: absolute;
+      float: none;
+    }
+    &.show-from {
+      .left {
+        left: 0;
+      }
+      .right {
+        left: 100%;
+      }
+    }
+    &.show-to {
+      .left {
+        left: -100%;
+      }
+      .right {
+        left: 0;
+      }
+    }
+    .range_inputs {
       display: none;
     }
   }
